Fix remaining drops and conversions, improve fmpp, remove  data exclusion

--- a/src/main/resources/assets/exotic-blocks/lang/en_us.json
+++ b/src/main/resources/assets/exotic-blocks/lang/en_us.json
@@ -12,7 +12,7 @@
 	"block.exotic-blocks.fancy_snow_block": "Fancy Snow",
 	"block.exotic-blocks.fancy_snow_block_species": "Connected Fancy Snow",
 	"block.exotic-blocks.fancy_stone_block": "Fancy Stone",
-	"block.exotic-blocks.fancy_stone_block_species": "Connected Fancy Snow",
+	"block.exotic-blocks.fancy_stone_block_species": "Connected Fancy Stone",
 
 	"block.exotic-blocks.black_connected_glass": "Black Connected Glass",
 	"block.exotic-blocks.blue_connected_glass": "Blue Connected Glass",
