--- a/src/main/resources/assets/exotic-blocks/lang/en_us.json
+++ b/src/main/resources/assets/exotic-blocks/lang/en_us.json
@@ -2716,5 +2716,5 @@
 	"block.exotic-blocks.birch_prismarine_lamp_cut_round_column": "Birch Cut Round Column with Prismarine Lamp",
 	"block.exotic-blocks.birch_glowstone_lamp_cut_round_column": "Birch Cut Round Column with Glowstone Lamp",
 
-    "itemGroup.exotic-blocks.item_group": "Exotic Blocks"
+  "itemGroup.exotic-blocks.group": "Exotic Blocks"
 }
