Fix  spruce localization

--- a/src/main/resources/assets/exotic-blocks/lang/en_us.json
+++ b/src/main/resources/assets/exotic-blocks/lang/en_us.json
@@ -2515,46 +2515,46 @@
 	"block.exotic-blocks.acacia_glowstone_cut_round_column": "Acacia Cut Round Column with Glowstone Inlay",
 	"block.exotic-blocks.acacia_prismarine_lamp_cut_round_column": "Acacia Cut Round Column with Prismarine Lamp",
 	"block.exotic-blocks.acacia_glowstone_lamp_cut_round_column": "Acacia Cut Round Column with Glowstone Lamp",
-	"block.exotic-blocks.jungle_wedge_straight": "Jungle Wedge",
-	"block.exotic-blocks.jungle_wedge_inside": "Jungle Wedge Inside Corner",
-	"block.exotic-blocks.jungle_wedge_outside": "Jungle Wedge Outside Corner",
-	"block.exotic-blocks.jungle_wedge_cap": "Jungle Wedge Cap",
-	"block.exotic-blocks.jungle_omni_slab": "Jungle Omnidirectional Slab",
-	"block.exotic-blocks.jungle_omni_stair": "Jungle Omnidirectional Stair",
-	"block.exotic-blocks.jungle_omni_stair_inside": "Jungle Omnidirectional Stair Inside Corner",
-	"block.exotic-blocks.jungle_omni_stair_outside": "Jungle Omnidirectional Stair Outside Corner",
-	"block.exotic-blocks.jungle_square_column": "Jungle Square Column",
-	"block.exotic-blocks.jungle_lamp_square_column": "Jungle Square Column Lamp",
-	"block.exotic-blocks.jungle_round_column": "Jungle Round Column",
-	"block.exotic-blocks.jungle_capped_round_column": "Jungle Capped Round Column",
-	"block.exotic-blocks.jungle_round_capped_round_column": "Jungle Round-Capped Round Column",
-	"block.exotic-blocks.jungle_prismarine_square_column": "Jungle Square Column with Prismarine Inlay",
-	"block.exotic-blocks.jungle_glowstone_square_column": "Jungle Square Column with Glowstone Inlay",
-	"block.exotic-blocks.jungle_prismarine_lamp_square_column": "Jungle Square Column with Prismarine Lamp",
-	"block.exotic-blocks.jungle_glowstone_lamp_square_column": "Jungle Square Column with Glowstone Lamp",
-	"block.exotic-blocks.jungle_inset_panel": "Jungle Inset Panel",
-	"block.exotic-blocks.jungle_lamp_inset_panel": "Jungle Inset Panel Lamp",
-	"block.exotic-blocks.jungle_prismarine_inset_panel": "Jungle Inset Panel with Prismarine Inlay",
-	"block.exotic-blocks.jungle_glowstone_inset_panel": "Jungle Inset Panel with Glowstone Inlay",
-	"block.exotic-blocks.jungle_prismarine_lamp_inset_panel": "Jungle Inset Panel with Prismarine Lamp",
-	"block.exotic-blocks.jungle_glowstone_lamp_inset_panel": "Jungle Inset Panel with Glowstone Lamp",
-	"block.exotic-blocks.jungle_lamp_flat_panel": "Jungle Flat Panel Lamp",
-	"block.exotic-blocks.jungle_prismarine_flat_panel": "Jungle Flat Panel with Prismarine Inlay",
-	"block.exotic-blocks.jungle_glowstone_flat_panel": "Jungle Flat Panel with Glowstone Inlay",
-	"block.exotic-blocks.jungle_prismarine_lamp_flat_panel": "Jungle Flat Panel with Prismarine Lamp",
-	"block.exotic-blocks.jungle_glowstone_lamp_flat_panel": "Jungle Flat Panel with Glowstone Lamp",
-	"block.exotic-blocks.jungle_capped_square_column": "Jungle Capped Square Column",
-	"block.exotic-blocks.jungle_lamp_capped_square_column": "Jungle Capped Square Column Lamp",
-	"block.exotic-blocks.jungle_prismarine_capped_square_column": "Jungle Capped Square Column with Prismarine Inlay",
-	"block.exotic-blocks.jungle_glowstone_capped_square_column": "Jungle Capped Square Column with Glowstone Inlay",
-	"block.exotic-blocks.jungle_prismarine_lamp_capped_square_column": "Jungle Capped Square Column with Prismarine Lamp",
-	"block.exotic-blocks.jungle_glowstone_lamp_capped_square_column": "Jungle Capped Square Column with Glowstone Lamp",
-	"block.exotic-blocks.jungle_cut_round_column": "Jungle Cut Round Column",
-	"block.exotic-blocks.jungle_lamp_cut_round_column": "Jungle Cut Round Column Lamp",
-	"block.exotic-blocks.jungle_prismarine_cut_round_column": "Jungle Cut Round Column with Prismarine Inlay",
-	"block.exotic-blocks.jungle_glowstone_cut_round_column": "Jungle Cut Round Column with Glowstone Inlay",
-	"block.exotic-blocks.jungle_prismarine_lamp_cut_round_column": "Jungle Cut Round Column with Prismarine Lamp",
-	"block.exotic-blocks.jungle_glowstone_lamp_cut_round_column": "Jungle Cut Round Column with Glowstone Lamp",
+	"block.exotic-blocks.spruce_wedge_straight": "Spruce Wedge",
+	"block.exotic-blocks.spruce_wedge_inside": "Spruce Wedge Inside Corner",
+	"block.exotic-blocks.spruce_wedge_outside": "Spruce Wedge Outside Corner",
+	"block.exotic-blocks.spruce_wedge_cap": "Spruce Wedge Cap",
+	"block.exotic-blocks.spruce_omni_slab": "Spruce Omnidirectional Slab",
+	"block.exotic-blocks.spruce_omni_stair": "Spruce Omnidirectional Stair",
+	"block.exotic-blocks.spruce_omni_stair_inside": "Spruce Omnidirectional Stair Inside Corner",
+	"block.exotic-blocks.spruce_omni_stair_outside": "Spruce Omnidirectional Stair Outside Corner",
+	"block.exotic-blocks.spruce_square_column": "Spruce Square Column",
+	"block.exotic-blocks.spruce_lamp_square_column": "Spruce Square Column Lamp",
+	"block.exotic-blocks.spruce_round_column": "Spruce Round Column",
+	"block.exotic-blocks.spruce_capped_round_column": "Spruce Capped Round Column",
+	"block.exotic-blocks.spruce_round_capped_round_column": "Spruce Round-Capped Round Column",
+	"block.exotic-blocks.spruce_prismarine_square_column": "Spruce Square Column with Prismarine Inlay",
+	"block.exotic-blocks.spruce_glowstone_square_column": "Spruce Square Column with Glowstone Inlay",
+	"block.exotic-blocks.spruce_prismarine_lamp_square_column": "Spruce Square Column with Prismarine Lamp",
+	"block.exotic-blocks.spruce_glowstone_lamp_square_column": "Spruce Square Column with Glowstone Lamp",
+	"block.exotic-blocks.spruce_inset_panel": "Spruce Inset Panel",
+	"block.exotic-blocks.spruce_lamp_inset_panel": "Spruce Inset Panel Lamp",
+	"block.exotic-blocks.spruce_prismarine_inset_panel": "Spruce Inset Panel with Prismarine Inlay",
+	"block.exotic-blocks.spruce_glowstone_inset_panel": "Spruce Inset Panel with Glowstone Inlay",
+	"block.exotic-blocks.spruce_prismarine_lamp_inset_panel": "Spruce Inset Panel with Prismarine Lamp",
+	"block.exotic-blocks.spruce_glowstone_lamp_inset_panel": "Spruce Inset Panel with Glowstone Lamp",
+	"block.exotic-blocks.spruce_lamp_flat_panel": "Spruce Flat Panel Lamp",
+	"block.exotic-blocks.spruce_prismarine_flat_panel": "Spruce Flat Panel with Prismarine Inlay",
+	"block.exotic-blocks.spruce_glowstone_flat_panel": "Spruce Flat Panel with Glowstone Inlay",
+	"block.exotic-blocks.spruce_prismarine_lamp_flat_panel": "Spruce Flat Panel with Prismarine Lamp",
+	"block.exotic-blocks.spruce_glowstone_lamp_flat_panel": "Spruce Flat Panel with Glowstone Lamp",
+	"block.exotic-blocks.spruce_capped_square_column": "Spruce Capped Square Column",
+	"block.exotic-blocks.spruce_lamp_capped_square_column": "Spruce Capped Square Column Lamp",
+	"block.exotic-blocks.spruce_prismarine_capped_square_column": "Spruce Capped Square Column with Prismarine Inlay",
+	"block.exotic-blocks.spruce_glowstone_capped_square_column": "Spruce Capped Square Column with Glowstone Inlay",
+	"block.exotic-blocks.spruce_prismarine_lamp_capped_square_column": "Spruce Capped Square Column with Prismarine Lamp",
+	"block.exotic-blocks.spruce_glowstone_lamp_capped_square_column": "Spruce Capped Square Column with Glowstone Lamp",
+	"block.exotic-blocks.spruce_cut_round_column": "Spruce Cut Round Column",
+	"block.exotic-blocks.spruce_lamp_cut_round_column": "Spruce Cut Round Column Lamp",
+	"block.exotic-blocks.spruce_prismarine_cut_round_column": "Spruce Cut Round Column with Prismarine Inlay",
+	"block.exotic-blocks.spruce_glowstone_cut_round_column": "Spruce Cut Round Column with Glowstone Inlay",
+	"block.exotic-blocks.spruce_prismarine_lamp_cut_round_column": "Spruce Cut Round Column with Prismarine Lamp",
+	"block.exotic-blocks.spruce_glowstone_lamp_cut_round_column": "Spruce Cut Round Column with Glowstone Lamp",
 	"block.exotic-blocks.oak_wedge_straight": "Oak Wedge",
 	"block.exotic-blocks.oak_wedge_inside": "Oak Wedge Inside Corner",
 	"block.exotic-blocks.oak_wedge_outside": "Oak Wedge Outside Corner",
